A few design tweaks for mobile

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Ohio Indivisible
 <div class="main-header">
 
   <div id="ohio-img">
-    <!-- <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Flag_Map_of_Ohio.svg" /> -->
-    <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_Map_of_Ohio.svg/200px-Flag_Map_of_Ohio.svg.png" />
+    <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Flag_Map_of_Ohio.svg" />
+    <!-- <img alt="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flag_Map_of_Ohio.svg/200px-Flag_Map_of_Ohio.svg.png" /> -->
   </div>
 
   <h1><em>Indivisible</em> <strong>OHIO</strong></h1>
