Move redirect only to the root

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 layout: default
 title: Ohio Indivisible
 ---
+    <!-- redirect to join page until the whole site is finished -->
+    <!-- if you're reading this... great! Send me a message about helping out! -->
+    <script>
+      if (window.location.hostname == "ohioindivisible.org") {
+        window.location.href = "http://join.ohioindivisible.org";
+      }
+    </script>
 
 <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
